gcc-14.2.0/gcc/testsuite/gdc.test/compilable/forward1.d
version https://git-lfs.github.com/spec/v1
oid sha256:7b0a31fd459ec1881dff13e96f4c435adc772f464590b6c0f168dd4bf3be26ae
size 152
